# xcore.boot

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STM32H723ZGTx_FLASH.ld
bootloader/: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  build-binary.sh  main.c  openocd_xcore.cfg
bootloader/.devcontainer/: Dockerfile  devcontainer.json
bootloader/boards/ST_NUCLEO144_H723ZG/: board.c  board.h  board.mk  board_ex.h
bootloader/boards/ST_NUCLEO144_H723ZG/cfg/: board.chcfg  board.fmpp
bootloader/boards/XCORE/: STM32H723xG_ITCM64k.ld  board.c  board.h  board.mk  board_ex.h  mcuconf.h
bootloader/boards/XCORE/cfg/: board.chcfg
bootloader/cfg/: chconf.h  halconf.h  lwipopts.h  mcuconf.h
bootloader/cmake/: gcc-arm-none-eabi.cmake
bootloader/ext/: CMakeLists.txt  README.md  ext.mk
bootloader/ext/ChibiOS_21.11.3/: CMakeLists.txt
bootloader/ext/ChibiOS_21.11.3/ext/lwip/: CHANGELOG  codespell_check.sh
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/: Filelists.cmake  Filelists.mk
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/addons/dhcp_extra_opts/: README  dhcp_extra_opts.c  dhcp_extra_opts.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/addons/ipv6_static_routing/: ip6_route_table.c  ip6_route_table.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/addons/tcp_isn/: tcp_isn.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/addons/tcp_md5/: tcp_md5.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/LwipMibCompiler/LwipMibCompiler/: Program.cs
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/LwipMibCompiler/SharpSnmpLib/: readme.txt
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/chargen/: chargen.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/httpserver/: httpserver-netconn.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/ping/: ping.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/rtp/: rtp.c  rtpdata.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/shell/: shell.c  shell.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/socket_examples/: socket_examples.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/tcpecho/: tcpecho.c  tcpecho.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/tcpecho_raw/: tcpecho_raw.c  tcpecho_raw.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/apps/udpecho/: udpecho.c  udpecho.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/example_app/: default_netif.h  lwipcfg.h.ci  lwipcfg.h.example  lwipopts.h  lwippools.h  test.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/example_app/test_configs/: opt_default.h  opt_dualstack.h  opt_ipv4only.h  opt_ipv6only.h  opt_no_tcp_dualstack.h  opt_no_tcp_ipv4only.h  opt_no_tcp_ipv6only.h  opt_no_udp_dualstack.h  opt_no_udp_ipv4only.h  opt_no_udp_ipv6only.h  opt_nosys_dual.h  opt_nosys_ipv4.h  opt_nosys_ipv6.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/httpd/fs_example/: fs_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/httpd/genfiles_example/: genfiles_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/httpd/https_example/: https_example.c  https_example.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/lwiperf/: lwiperf_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/mdns/: mdns_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/mqtt/: mqtt_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/ppp/: pppos_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/snmp/: snmp_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/sntp/: sntp_example.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/examples/tftp/: tftp_example.c  tftp_example.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/ports/: CMakeCommon.cmake  Common.allports.mk
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/ports/freertos/: sys_arch.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/ports/unix/: Filelists.cmake  README  setup-tapif
bootloader/ext/ChibiOS_21.11.3/ext/lwip/contrib/ports/win32/: Filelists.cmake  pcapif.c  pcapif_helper.c  pcapif_helper.h  readme.txt  sio.c  sys_arch.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/doc/doxygen/: lwip.Doxyfile
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/fuzz/: Makefile  README  fuzz.c  fuzz2.c  fuzz3.c  fuzz_common.c  fuzz_common.h  lwipopts.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/: Filelists.cmake  Filelists.mk  Makefile  lwip_unittests.c  lwipopts.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/api/: test_sockets.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/core/: test_dns.c  test_dns.h  test_mem.c  test_netif.c  test_pbuf.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/dhcp/: test_dhcp.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/etharp/: test_etharp.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/ip4/: test_ip4.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/ip6/: test_ip6.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/mdns/: test_mdns.c
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/ppp/: test_pppos.c  test_pppos.h
bootloader/ext/ChibiOS_21.11.3/ext/lwip/test/unit/tcp/: tcp_helper.c  test_tcp.c  test_tcp_state.c  test_tcp_state.h
bootloader/ext/ChibiOS_21.11.3/os/various/lwip_bindings/arch/: sys_arch.c
bootloader/ext/sha/: CMakeLists.txt  LICENSE.md
bootloader/ext/stm32h7xx_hal_driver/: CMakeLists.txt
bootloader/ext/stm32h7xx_hal_driver/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_hal_def.h
bootloader/src/: bootloader.c  bootloader.h  globals.c  globals.h  heartbeat.c  heartbeat.h  id_eeprom.c  id_eeprom.h  service_discovery.c  service_discovery.h  status_led.c  status_led.h  stm32hal.c
cmake/: gcc-arm-none-eabi.cmake
host-software/: .dockerignore  (+3 more)
image/: CMakeLists.txt  build_image.sh
image/in/: index.html  index2.html
lib/: CMakeLists.txt
lib/FastCRC/src/: FastCRC.h  FastCRC_tables.h  FastCRChw.cpp  FastCRCsw.cpp
lib/conf/: stm32h7xx_hal_conf.h
(+81 files in other folders)
