
file(GLOB_RECURSE HAL_SOURCES "stm32h7xx_hal_driver/Src/*.c")

add_library(stm32h7xx_hal_driver EXCLUDE_FROM_ALL
        cmsis_device_h7/Source/Templates/gcc/startup_stm32h723xx.s
        cmsis_device_h7/Source/Templates/system_stm32h7xx.c
        ${HAL_SOURCES}
)

# Set the target
target_compile_definitions(stm32h7xx_hal_driver PUBLIC
        USE_HAL_DRIVER
        STM32H723xx
        $<$<CONFIG:Debug>:DEBUG>
)
set(THREADX_ARCH cortex_m7)
SET(THREADX_TOOLCHAIN gnu)

target_include_directories(stm32h7xx_hal_driver PUBLIC
        conf
        cmsis_core/Include
        cmsis_device_h7/Include
        "stm32h7xx_hal_driver/Inc"
)

add_subdirectory(threadx)
target_link_options(threadx INTERFACE
        "--specs=nosys.specs"
)

# We do this instead of add_subdirectory(netxduo) in order to have fine-grained control over what gets compiled into our project.
add_library(netxduo
        netxduo/common/src/nx_arp_announce_send.c
        netxduo/common/src/nx_arp_dynamic_entries_invalidate.c
        netxduo/common/src/nx_arp_dynamic_entry_delete.c
        netxduo/common/src/nx_arp_dynamic_entry_set.c
        netxduo/common/src/nx_arp_enable.c
        netxduo/common/src/nx_arp_entry_allocate.c
        netxduo/common/src/nx_arp_entry_delete.c
        netxduo/common/src/nx_arp_gratuitous_send.c
        netxduo/common/src/nx_arp_hardware_address_find.c
        netxduo/common/src/nx_arp_info_get.c
        netxduo/common/src/nx_arp_initialize.c
        netxduo/common/src/nx_arp_interface_entries_delete.c
        netxduo/common/src/nx_arp_ip_address_find.c
        netxduo/common/src/nx_arp_packet_deferred_receive.c
        netxduo/common/src/nx_arp_packet_receive.c
        netxduo/common/src/nx_arp_packet_send.c
        netxduo/common/src/nx_arp_periodic_update.c
        netxduo/common/src/nx_arp_probe_send.c
        netxduo/common/src/nx_arp_queue_process.c
        netxduo/common/src/nx_arp_queue_send.c
        netxduo/common/src/nx_arp_static_entries_delete.c
        netxduo/common/src/nx_arp_static_entry_create.c
        netxduo/common/src/nx_arp_static_entry_delete.c
        netxduo/common/src/nx_arp_static_entry_delete_internal.c
        netxduo/common/src/nx_http_proxy_client.c
        netxduo/common/src/nx_icmp_cleanup.c
        netxduo/common/src/nx_icmp_enable.c
        netxduo/common/src/nx_icmp_info_get.c
        netxduo/common/src/nx_icmp_interface_ping.c
        netxduo/common/src/nx_icmp_interface_ping6.c
        netxduo/common/src/nx_icmp_packet_process.c
        netxduo/common/src/nx_icmp_packet_receive.c
        netxduo/common/src/nx_icmp_ping.c
        netxduo/common/src/nx_icmp_ping6.c
        netxduo/common/src/nx_icmp_queue_process.c
        netxduo/common/src/nx_icmpv4_packet_process.c
        netxduo/common/src/nx_icmpv4_process_echo_reply.c
        netxduo/common/src/nx_icmpv4_process_echo_request.c
        netxduo/common/src/nx_icmpv4_send_error_message.c
        netxduo/common/src/nx_icmpv6_DAD_clear_NDCache_entry.c
        netxduo/common/src/nx_icmpv6_DAD_failure.c
        netxduo/common/src/nx_icmpv6_dest_table_add.c
        netxduo/common/src/nx_icmpv6_dest_table_find.c
        netxduo/common/src/nx_icmpv6_destination_table_periodic_update.c
        netxduo/common/src/nx_icmpv6_packet_process.c
        netxduo/common/src/nx_icmpv6_perform_DAD.c
        netxduo/common/src/nx_icmpv6_process_echo_reply.c
        netxduo/common/src/nx_icmpv6_process_echo_request.c
        netxduo/common/src/nx_icmpv6_process_na.c
        netxduo/common/src/nx_icmpv6_process_ns.c
        netxduo/common/src/nx_icmpv6_process_packet_too_big.c
        netxduo/common/src/nx_icmpv6_process_ra.c
        netxduo/common/src/nx_icmpv6_process_redirect.c
        netxduo/common/src/nx_icmpv6_send_error_message.c
        netxduo/common/src/nx_icmpv6_send_ns.c
        netxduo/common/src/nx_icmpv6_send_queued_packets.c
        netxduo/common/src/nx_icmpv6_send_rs.c
        netxduo/common/src/nx_icmpv6_validate_neighbor_message.c
        netxduo/common/src/nx_icmpv6_validate_options.c
        netxduo/common/src/nx_icmpv6_validate_ra.c
        netxduo/common/src/nx_igmp_enable.c
        netxduo/common/src/nx_igmp_info_get.c
        netxduo/common/src/nx_igmp_interface_report_send.c
        netxduo/common/src/nx_igmp_loopback_disable.c
        netxduo/common/src/nx_igmp_loopback_enable.c
        netxduo/common/src/nx_igmp_multicast_check.c
        netxduo/common/src/nx_igmp_multicast_interface_join.c
        netxduo/common/src/nx_igmp_multicast_interface_join_internal.c
        netxduo/common/src/nx_igmp_multicast_interface_leave.c
        netxduo/common/src/nx_igmp_multicast_interface_leave_internal.c
        netxduo/common/src/nx_igmp_multicast_join.c
        netxduo/common/src/nx_igmp_multicast_leave.c
        netxduo/common/src/nx_igmp_packet_process.c
        netxduo/common/src/nx_igmp_packet_receive.c
        netxduo/common/src/nx_igmp_periodic_processing.c
        netxduo/common/src/nx_igmp_queue_process.c
        netxduo/common/src/nx_invalidate_destination_entry.c
        netxduo/common/src/nx_ip_address_change_notify.c
        netxduo/common/src/nx_ip_address_get.c
        netxduo/common/src/nx_ip_address_set.c
        netxduo/common/src/nx_ip_auxiliary_packet_pool_set.c
        netxduo/common/src/nx_ip_checksum_compute.c
        netxduo/common/src/nx_ip_create.c
        netxduo/common/src/nx_ip_deferred_link_status_process.c
        netxduo/common/src/nx_ip_delete.c
        netxduo/common/src/nx_ip_delete_queue_clear.c
        netxduo/common/src/nx_ip_dispatch_process.c
        netxduo/common/src/nx_ip_driver_deferred_enable.c
        netxduo/common/src/nx_ip_driver_deferred_processing.c
        netxduo/common/src/nx_ip_driver_deferred_receive.c
        netxduo/common/src/nx_ip_driver_direct_command.c
        netxduo/common/src/nx_ip_driver_interface_direct_command.c
        netxduo/common/src/nx_ip_driver_link_status_event.c
        netxduo/common/src/nx_ip_driver_packet_send.c
        netxduo/common/src/nx_ip_fast_periodic_timer_entry.c
        netxduo/common/src/nx_ip_forward_packet_process.c
        netxduo/common/src/nx_ip_forwarding_disable.c
        netxduo/common/src/nx_ip_forwarding_enable.c
        netxduo/common/src/nx_ip_fragment_assembly.c
        netxduo/common/src/nx_ip_fragment_disable.c
        netxduo/common/src/nx_ip_fragment_enable.c
        netxduo/common/src/nx_ip_fragment_forward_packet.c
        netxduo/common/src/nx_ip_fragment_packet.c
        netxduo/common/src/nx_ip_fragment_timeout_check.c
        netxduo/common/src/nx_ip_gateway_address_clear.c
        netxduo/common/src/nx_ip_gateway_address_get.c
        netxduo/common/src/nx_ip_gateway_address_set.c
        netxduo/common/src/nx_ip_header_add.c
        netxduo/common/src/nx_ip_info_get.c
        netxduo/common/src/nx_ip_initialize.c
        netxduo/common/src/nx_ip_interface_address_get.c
        netxduo/common/src/nx_ip_interface_address_mapping_configure.c
        netxduo/common/src/nx_ip_interface_address_set.c
        netxduo/common/src/nx_ip_interface_attach.c
        netxduo/common/src/nx_ip_interface_capability_get.c
        netxduo/common/src/nx_ip_interface_capability_set.c
        netxduo/common/src/nx_ip_interface_detach.c
        netxduo/common/src/nx_ip_interface_info_get.c
        netxduo/common/src/nx_ip_interface_mtu_set.c
        netxduo/common/src/nx_ip_interface_physical_address_get.c
        netxduo/common/src/nx_ip_interface_physical_address_set.c
        netxduo/common/src/nx_ip_interface_status_check.c
        netxduo/common/src/nx_ip_link_status_change_notify_set.c
        netxduo/common/src/nx_ip_max_payload_size_find.c
        netxduo/common/src/nx_ip_packet_checksum_compute.c
        netxduo/common/src/nx_ip_packet_deferred_receive.c
        netxduo/common/src/nx_ip_packet_receive.c
        netxduo/common/src/nx_ip_packet_send.c
        netxduo/common/src/nx_ip_periodic_timer_entry.c
        netxduo/common/src/nx_ip_raw_packet_cleanup.c
        netxduo/common/src/nx_ip_raw_packet_disable.c
        netxduo/common/src/nx_ip_raw_packet_enable.c
        netxduo/common/src/nx_ip_raw_packet_filter_set.c
        netxduo/common/src/nx_ip_raw_packet_processing.c
        netxduo/common/src/nx_ip_raw_packet_receive.c
        netxduo/common/src/nx_ip_raw_packet_send.c
        netxduo/common/src/nx_ip_raw_packet_source_send.c
        netxduo/common/src/nx_ip_raw_receive_queue_max_set.c
        netxduo/common/src/nx_ip_route_find.c
        netxduo/common/src/nx_ip_static_route_add.c
        netxduo/common/src/nx_ip_static_route_delete.c
        netxduo/common/src/nx_ip_status_check.c
        netxduo/common/src/nx_ip_thread_entry.c
        netxduo/common/src/nx_ipv4_multicast_interface_join.c
        netxduo/common/src/nx_ipv4_multicast_interface_leave.c
        netxduo/common/src/nx_ipv4_option_process.c
        netxduo/common/src/nx_ipv4_packet_receive.c
        netxduo/common/src/nx_ipv6_fragment_process.c
        netxduo/common/src/nx_ipv6_header_add.c
        netxduo/common/src/nx_ipv6_multicast_join.c
        netxduo/common/src/nx_ipv6_multicast_leave.c
        netxduo/common/src/nx_ipv6_option_error.c
        netxduo/common/src/nx_ipv6_packet_copy.c
        netxduo/common/src/nx_ipv6_packet_receive.c
        netxduo/common/src/nx_ipv6_packet_send.c
        netxduo/common/src/nx_ipv6_prefix_list_add_entry.c
        netxduo/common/src/nx_ipv6_prefix_list_delete.c
        netxduo/common/src/nx_ipv6_prefix_list_delete_entry.c
        netxduo/common/src/nx_ipv6_process_fragment_option.c
        netxduo/common/src/nx_ipv6_process_hop_by_hop_option.c
        netxduo/common/src/nx_ipv6_process_routing_option.c
        netxduo/common/src/nx_ipv6_util.c
        netxduo/common/src/nx_link.c
        netxduo/common/src/nx_md5.c
        netxduo/common/src/nx_nd_cache_add.c
        netxduo/common/src/nx_nd_cache_add_entry.c
        netxduo/common/src/nx_nd_cache_delete_internal.c
        netxduo/common/src/nx_nd_cache_fast_periodic_update.c
        netxduo/common/src/nx_nd_cache_find_entry.c
        netxduo/common/src/nx_nd_cache_find_entry_by_mac_addr.c
        netxduo/common/src/nx_nd_cache_interface_entries_delete.c
        netxduo/common/src/nx_nd_cache_slow_periodic_update.c
        netxduo/common/src/nx_packet_allocate.c
        netxduo/common/src/nx_packet_copy.c
        netxduo/common/src/nx_packet_data_adjust.c
        netxduo/common/src/nx_packet_data_append.c
        netxduo/common/src/nx_packet_data_extract_offset.c
        netxduo/common/src/nx_packet_data_retrieve.c
        netxduo/common/src/nx_packet_debug_info_get.c
        netxduo/common/src/nx_packet_length_get.c
        netxduo/common/src/nx_packet_pool_cleanup.c
        netxduo/common/src/nx_packet_pool_create.c
        netxduo/common/src/nx_packet_pool_delete.c
        netxduo/common/src/nx_packet_pool_info_get.c
        netxduo/common/src/nx_packet_pool_initialize.c
        netxduo/common/src/nx_packet_pool_low_watermark_set.c
        netxduo/common/src/nx_packet_release.c
        netxduo/common/src/nx_packet_transmit_release.c
        netxduo/common/src/nx_packet_vlan_priority_set.c
        netxduo/common/src/nx_ram_network_driver.c
        netxduo/common/src/nx_rarp_disable.c
        netxduo/common/src/nx_rarp_enable.c
        netxduo/common/src/nx_rarp_info_get.c
        netxduo/common/src/nx_rarp_packet_deferred_receive.c
        netxduo/common/src/nx_rarp_packet_receive.c
        netxduo/common/src/nx_rarp_packet_send.c
        netxduo/common/src/nx_rarp_periodic_update.c
        netxduo/common/src/nx_rarp_queue_process.c
        netxduo/common/src/nx_system_initialize.c
        netxduo/common/src/nx_tcp_cleanup_deferred.c
        netxduo/common/src/nx_tcp_client_bind_cleanup.c
        netxduo/common/src/nx_tcp_client_socket_bind.c
        netxduo/common/src/nx_tcp_client_socket_connect.c
        netxduo/common/src/nx_tcp_client_socket_port_get.c
        netxduo/common/src/nx_tcp_client_socket_unbind.c
        netxduo/common/src/nx_tcp_connect_cleanup.c
        netxduo/common/src/nx_tcp_deferred_cleanup_check.c
        netxduo/common/src/nx_tcp_disconnect_cleanup.c
        netxduo/common/src/nx_tcp_enable.c
        netxduo/common/src/nx_tcp_fast_periodic_processing.c
        netxduo/common/src/nx_tcp_free_port_find.c
        netxduo/common/src/nx_tcp_info_get.c
        netxduo/common/src/nx_tcp_initialize.c
        netxduo/common/src/nx_tcp_mss_option_get.c
        netxduo/common/src/nx_tcp_no_connection_reset.c
        netxduo/common/src/nx_tcp_packet_process.c
        netxduo/common/src/nx_tcp_packet_receive.c
        netxduo/common/src/nx_tcp_packet_send_ack.c
        netxduo/common/src/nx_tcp_packet_send_control.c
        netxduo/common/src/nx_tcp_packet_send_fin.c
        netxduo/common/src/nx_tcp_packet_send_probe.c
        netxduo/common/src/nx_tcp_packet_send_rst.c
        netxduo/common/src/nx_tcp_packet_send_syn.c
        netxduo/common/src/nx_tcp_periodic_processing.c
        netxduo/common/src/nx_tcp_queue_process.c
        netxduo/common/src/nx_tcp_receive_cleanup.c
        netxduo/common/src/nx_tcp_server_socket_accept.c
        netxduo/common/src/nx_tcp_server_socket_driver_listen.c
        netxduo/common/src/nx_tcp_server_socket_listen.c
        netxduo/common/src/nx_tcp_server_socket_relisten.c
        netxduo/common/src/nx_tcp_server_socket_unaccept.c
        netxduo/common/src/nx_tcp_server_socket_unlisten.c
        netxduo/common/src/nx_tcp_socket_block_cleanup.c
        netxduo/common/src/nx_tcp_socket_bytes_available.c
        netxduo/common/src/nx_tcp_socket_connection_reset.c
        netxduo/common/src/nx_tcp_socket_create.c
        netxduo/common/src/nx_tcp_socket_delete.c
        netxduo/common/src/nx_tcp_socket_disconnect.c
        netxduo/common/src/nx_tcp_socket_disconnect_complete_notify.c
        netxduo/common/src/nx_tcp_socket_driver_establish.c
        netxduo/common/src/nx_tcp_socket_driver_packet_receive.c
        netxduo/common/src/nx_tcp_socket_establish_notify.c
        netxduo/common/src/nx_tcp_socket_info_get.c
        netxduo/common/src/nx_tcp_socket_mss_get.c
        netxduo/common/src/nx_tcp_socket_mss_peer_get.c
        netxduo/common/src/nx_tcp_socket_mss_set.c
        netxduo/common/src/nx_tcp_socket_packet_process.c
        netxduo/common/src/nx_tcp_socket_peer_info_get.c
        netxduo/common/src/nx_tcp_socket_queue_depth_notify_set.c
        netxduo/common/src/nx_tcp_socket_receive.c
        netxduo/common/src/nx_tcp_socket_receive_notify.c
        netxduo/common/src/nx_tcp_socket_receive_queue_flush.c
        netxduo/common/src/nx_tcp_socket_receive_queue_max_set.c
        netxduo/common/src/nx_tcp_socket_retransmit.c
        netxduo/common/src/nx_tcp_socket_send.c
        netxduo/common/src/nx_tcp_socket_send_internal.c
        netxduo/common/src/nx_tcp_socket_state_ack_check.c
        netxduo/common/src/nx_tcp_socket_state_closing.c
        netxduo/common/src/nx_tcp_socket_state_data_check.c
        netxduo/common/src/nx_tcp_socket_state_established.c
        netxduo/common/src/nx_tcp_socket_state_fin_wait1.c
        netxduo/common/src/nx_tcp_socket_state_fin_wait2.c
        netxduo/common/src/nx_tcp_socket_state_last_ack.c
        netxduo/common/src/nx_tcp_socket_state_syn_received.c
        netxduo/common/src/nx_tcp_socket_state_syn_sent.c
        netxduo/common/src/nx_tcp_socket_state_transmit_check.c
        netxduo/common/src/nx_tcp_socket_state_wait.c
        netxduo/common/src/nx_tcp_socket_thread_resume.c
        netxduo/common/src/nx_tcp_socket_thread_suspend.c
        netxduo/common/src/nx_tcp_socket_timed_wait_callback.c
        netxduo/common/src/nx_tcp_socket_transmit_configure.c
        netxduo/common/src/nx_tcp_socket_transmit_queue_flush.c
        netxduo/common/src/nx_tcp_socket_vlan_priority_set.c
        netxduo/common/src/nx_tcp_socket_window_update_notify_set.c
        netxduo/common/src/nx_tcp_transmit_cleanup.c
        netxduo/common/src/nx_tcp_window_scaling_option_get.c
        netxduo/common/src/nx_trace_event_insert.c
        netxduo/common/src/nx_trace_event_update.c
        netxduo/common/src/nx_trace_object_register.c
        netxduo/common/src/nx_trace_object_unregister.c
        netxduo/common/src/nx_udp_bind_cleanup.c
        netxduo/common/src/nx_udp_enable.c
        netxduo/common/src/nx_udp_free_port_find.c
        netxduo/common/src/nx_udp_info_get.c
        netxduo/common/src/nx_udp_packet_info_extract.c
        netxduo/common/src/nx_udp_packet_receive.c
        netxduo/common/src/nx_udp_receive_cleanup.c
        netxduo/common/src/nx_udp_socket_bind.c
        netxduo/common/src/nx_udp_socket_bytes_available.c
        netxduo/common/src/nx_udp_socket_checksum_disable.c
        netxduo/common/src/nx_udp_socket_checksum_enable.c
        netxduo/common/src/nx_udp_socket_create.c
        netxduo/common/src/nx_udp_socket_delete.c
        netxduo/common/src/nx_udp_socket_driver_packet_receive.c
        netxduo/common/src/nx_udp_socket_info_get.c
        netxduo/common/src/nx_udp_socket_port_get.c
        netxduo/common/src/nx_udp_socket_receive.c
        netxduo/common/src/nx_udp_socket_receive_notify.c
        netxduo/common/src/nx_udp_socket_send.c
        netxduo/common/src/nx_udp_socket_source_send.c
        netxduo/common/src/nx_udp_socket_unbind.c
        netxduo/common/src/nx_udp_socket_vlan_priority_set.c
        netxduo/common/src/nx_udp_source_extract.c
        netxduo/common/src/nx_utility.c
        netxduo/common/src/nxd_icmp_enable.c
        netxduo/common/src/nxd_icmp_ping.c
        netxduo/common/src/nxd_icmp_source_ping.c
        netxduo/common/src/nxd_icmpv6_ra_flag_callback_set.c
        netxduo/common/src/nxd_ip_raw_packet_send.c
        netxduo/common/src/nxd_ip_raw_packet_source_send.c
        netxduo/common/src/nxd_ipv6_address_change_notify.c
        netxduo/common/src/nxd_ipv6_address_delete.c
        netxduo/common/src/nxd_ipv6_address_get.c
        netxduo/common/src/nxd_ipv6_address_set.c
        netxduo/common/src/nxd_ipv6_default_router_add.c
        netxduo/common/src/nxd_ipv6_default_router_add_internal.c
        netxduo/common/src/nxd_ipv6_default_router_delete.c
        netxduo/common/src/nxd_ipv6_default_router_entry_get.c
        netxduo/common/src/nxd_ipv6_default_router_get.c
        netxduo/common/src/nxd_ipv6_default_router_number_of_entries_get.c
        netxduo/common/src/nxd_ipv6_default_router_table_init.c
        netxduo/common/src/nxd_ipv6_destination_table_find_next_hop.c
        netxduo/common/src/nxd_ipv6_disable.c
        netxduo/common/src/nxd_ipv6_enable.c
        netxduo/common/src/nxd_ipv6_find_default_router_from_address.c
        netxduo/common/src/nxd_ipv6_find_max_prefix_length.c
        netxduo/common/src/nxd_ipv6_interface_find.c
        netxduo/common/src/nxd_ipv6_multicast_interface_join.c
        netxduo/common/src/nxd_ipv6_multicast_interface_leave.c
        netxduo/common/src/nxd_ipv6_prefix_router_timer_tick.c
        netxduo/common/src/nxd_ipv6_raw_packet_send_internal.c
        netxduo/common/src/nxd_ipv6_router_lookup.c
        netxduo/common/src/nxd_ipv6_router_solicitation_check.c
        netxduo/common/src/nxd_ipv6_search_onlink.c
        netxduo/common/src/nxd_ipv6_stateless_address_autoconfig_disable.c
        netxduo/common/src/nxd_ipv6_stateless_address_autoconfig_enable.c
        netxduo/common/src/nxd_nd_cache_entry_delete.c
        netxduo/common/src/nxd_nd_cache_entry_set.c
        netxduo/common/src/nxd_nd_cache_hardware_address_find.c
        netxduo/common/src/nxd_nd_cache_invalidate.c
        netxduo/common/src/nxd_nd_cache_ip_address_find.c
        netxduo/common/src/nxd_tcp_client_socket_connect.c
        netxduo/common/src/nxd_tcp_socket_peer_info_get.c
        netxduo/common/src/nxd_udp_packet_info_extract.c
        netxduo/common/src/nxd_udp_socket_send.c
        netxduo/common/src/nxd_udp_socket_source_send.c
        netxduo/common/src/nxd_udp_source_extract.c
        netxduo/common/src/nxde_icmp_enable.c
        netxduo/common/src/nxde_icmp_ping.c
        netxduo/common/src/nxde_icmp_source_ping.c
        netxduo/common/src/nxde_icmpv6_ra_flag_callback_set.c
        netxduo/common/src/nxde_ip_raw_packet_send.c
        netxduo/common/src/nxde_ip_raw_packet_source_send.c
        netxduo/common/src/nxde_ipv6_address_change_notify.c
        netxduo/common/src/nxde_ipv6_address_delete.c
        netxduo/common/src/nxde_ipv6_address_get.c
        netxduo/common/src/nxde_ipv6_address_set.c
        netxduo/common/src/nxde_ipv6_default_router_add.c
        netxduo/common/src/nxde_ipv6_default_router_delete.c
        netxduo/common/src/nxde_ipv6_default_router_entry_get.c
        netxduo/common/src/nxde_ipv6_default_router_get.c
        netxduo/common/src/nxde_ipv6_default_router_number_of_entries_get.c
        netxduo/common/src/nxde_ipv6_disable.c
        netxduo/common/src/nxde_ipv6_enable.c
        netxduo/common/src/nxde_ipv6_multicast_interface_join.c
        netxduo/common/src/nxde_ipv6_multicast_interface_leave.c
        netxduo/common/src/nxde_ipv6_stateless_address_autoconfig_disable.c
        netxduo/common/src/nxde_ipv6_stateless_address_autoconfig_enable.c
        netxduo/common/src/nxde_nd_cache_entry_delete.c
        netxduo/common/src/nxde_nd_cache_entry_set.c
        netxduo/common/src/nxde_nd_cache_hardware_address_find.c
        netxduo/common/src/nxde_nd_cache_invalidate.c
        netxduo/common/src/nxde_nd_cache_ip_address_find.c
        netxduo/common/src/nxde_tcp_client_socket_connect.c
        netxduo/common/src/nxde_tcp_socket_peer_info_get.c
        netxduo/common/src/nxde_udp_packet_info_extract.c
        netxduo/common/src/nxde_udp_socket_send.c
        netxduo/common/src/nxde_udp_socket_source_send.c
        netxduo/common/src/nxde_udp_source_extract.c
        netxduo/common/src/nxe_arp_dynamic_entries_invalidate.c
        netxduo/common/src/nxe_arp_dynamic_entry_set.c
        netxduo/common/src/nxe_arp_enable.c
        netxduo/common/src/nxe_arp_entry_delete.c
        netxduo/common/src/nxe_arp_gratuitous_send.c
        netxduo/common/src/nxe_arp_hardware_address_find.c
        netxduo/common/src/nxe_arp_info_get.c
        netxduo/common/src/nxe_arp_ip_address_find.c
        netxduo/common/src/nxe_arp_static_entries_delete.c
        netxduo/common/src/nxe_arp_static_entry_create.c
        netxduo/common/src/nxe_arp_static_entry_delete.c
        netxduo/common/src/nxe_icmp_enable.c
        netxduo/common/src/nxe_icmp_info_get.c
        netxduo/common/src/nxe_icmp_ping.c
        netxduo/common/src/nxe_igmp_enable.c
        netxduo/common/src/nxe_igmp_info_get.c
        netxduo/common/src/nxe_igmp_loopback_disable.c
        netxduo/common/src/nxe_igmp_loopback_enable.c
        netxduo/common/src/nxe_igmp_multicast_interface_join.c
        netxduo/common/src/nxe_igmp_multicast_interface_leave.c
        netxduo/common/src/nxe_igmp_multicast_join.c
        netxduo/common/src/nxe_igmp_multicast_leave.c
        netxduo/common/src/nxe_ip_address_change_notify.c
        netxduo/common/src/nxe_ip_address_get.c
        netxduo/common/src/nxe_ip_address_set.c
        netxduo/common/src/nxe_ip_auxiliary_packet_pool_set.c
        netxduo/common/src/nxe_ip_create.c
        netxduo/common/src/nxe_ip_delete.c
        netxduo/common/src/nxe_ip_driver_direct_command.c
        netxduo/common/src/nxe_ip_driver_interface_direct_command.c
        netxduo/common/src/nxe_ip_forwarding_disable.c
        netxduo/common/src/nxe_ip_forwarding_enable.c
        netxduo/common/src/nxe_ip_fragment_disable.c
        netxduo/common/src/nxe_ip_fragment_enable.c
        netxduo/common/src/nxe_ip_gateway_address_clear.c
        netxduo/common/src/nxe_ip_gateway_address_get.c
        netxduo/common/src/nxe_ip_gateway_address_set.c
        netxduo/common/src/nxe_ip_info_get.c
        netxduo/common/src/nxe_ip_interface_address_get.c
        netxduo/common/src/nxe_ip_interface_address_mapping_configure.c
        netxduo/common/src/nxe_ip_interface_address_set.c
        netxduo/common/src/nxe_ip_interface_attach.c
        netxduo/common/src/nxe_ip_interface_capability_get.c
        netxduo/common/src/nxe_ip_interface_capability_set.c
        netxduo/common/src/nxe_ip_interface_detach.c
        netxduo/common/src/nxe_ip_interface_info_get.c
        netxduo/common/src/nxe_ip_interface_mtu_set.c
        netxduo/common/src/nxe_ip_interface_physical_address_get.c
        netxduo/common/src/nxe_ip_interface_physical_address_set.c
        netxduo/common/src/nxe_ip_interface_status_check.c
        netxduo/common/src/nxe_ip_link_status_change_notify_set.c
        netxduo/common/src/nxe_ip_max_payload_size_find.c
        netxduo/common/src/nxe_ip_raw_packet_disable.c
        netxduo/common/src/nxe_ip_raw_packet_enable.c
        netxduo/common/src/nxe_ip_raw_packet_filter_set.c
        netxduo/common/src/nxe_ip_raw_packet_receive.c
        netxduo/common/src/nxe_ip_raw_packet_send.c
        netxduo/common/src/nxe_ip_raw_packet_source_send.c
        netxduo/common/src/nxe_ip_raw_receive_queue_max_set.c
        netxduo/common/src/nxe_ip_static_route_add.c
        netxduo/common/src/nxe_ip_static_route_delete.c
        netxduo/common/src/nxe_ip_status_check.c
        netxduo/common/src/nxe_ipv4_multicast_interface_join.c
        netxduo/common/src/nxe_ipv4_multicast_interface_leave.c
        netxduo/common/src/nxe_packet_allocate.c
        netxduo/common/src/nxe_packet_copy.c
        netxduo/common/src/nxe_packet_data_append.c
        netxduo/common/src/nxe_packet_data_extract_offset.c
        netxduo/common/src/nxe_packet_data_retrieve.c
        netxduo/common/src/nxe_packet_length_get.c
        netxduo/common/src/nxe_packet_pool_create.c
        netxduo/common/src/nxe_packet_pool_delete.c
        netxduo/common/src/nxe_packet_pool_info_get.c
        netxduo/common/src/nxe_packet_pool_low_watermark_set.c
        netxduo/common/src/nxe_packet_release.c
        netxduo/common/src/nxe_packet_transmit_release.c
        netxduo/common/src/nxe_packet_vlan_priority_set.c
        netxduo/common/src/nxe_rarp_disable.c
        netxduo/common/src/nxe_rarp_enable.c
        netxduo/common/src/nxe_rarp_info_get.c
        netxduo/common/src/nxe_tcp_client_socket_bind.c
        netxduo/common/src/nxe_tcp_client_socket_connect.c
        netxduo/common/src/nxe_tcp_client_socket_port_get.c
        netxduo/common/src/nxe_tcp_client_socket_unbind.c
        netxduo/common/src/nxe_tcp_enable.c
        netxduo/common/src/nxe_tcp_free_port_find.c
        netxduo/common/src/nxe_tcp_info_get.c
        netxduo/common/src/nxe_tcp_server_socket_accept.c
        netxduo/common/src/nxe_tcp_server_socket_listen.c
        netxduo/common/src/nxe_tcp_server_socket_relisten.c
        netxduo/common/src/nxe_tcp_server_socket_unaccept.c
        netxduo/common/src/nxe_tcp_server_socket_unlisten.c
        netxduo/common/src/nxe_tcp_socket_bytes_available.c
        netxduo/common/src/nxe_tcp_socket_create.c
        netxduo/common/src/nxe_tcp_socket_delete.c
        netxduo/common/src/nxe_tcp_socket_disconnect.c
        netxduo/common/src/nxe_tcp_socket_disconnect_complete_notify.c
        netxduo/common/src/nxe_tcp_socket_establish_notify.c
        netxduo/common/src/nxe_tcp_socket_info_get.c
        netxduo/common/src/nxe_tcp_socket_mss_get.c
        netxduo/common/src/nxe_tcp_socket_mss_peer_get.c
        netxduo/common/src/nxe_tcp_socket_mss_set.c
        netxduo/common/src/nxe_tcp_socket_peer_info_get.c
        netxduo/common/src/nxe_tcp_socket_queue_depth_notify_set.c
        netxduo/common/src/nxe_tcp_socket_receive.c
        netxduo/common/src/nxe_tcp_socket_receive_notify.c
        netxduo/common/src/nxe_tcp_socket_receive_queue_max_set.c
        netxduo/common/src/nxe_tcp_socket_send.c
        netxduo/common/src/nxe_tcp_socket_state_wait.c
        netxduo/common/src/nxe_tcp_socket_timed_wait_callback.c
        netxduo/common/src/nxe_tcp_socket_transmit_configure.c
        netxduo/common/src/nxe_tcp_socket_vlan_priority_set.c
        netxduo/common/src/nxe_tcp_socket_window_update_notify_set.c
        netxduo/common/src/nxe_udp_enable.c
        netxduo/common/src/nxe_udp_free_port_find.c
        netxduo/common/src/nxe_udp_info_get.c
        netxduo/common/src/nxe_udp_packet_info_extract.c
        netxduo/common/src/nxe_udp_socket_bind.c
        netxduo/common/src/nxe_udp_socket_bytes_available.c
        netxduo/common/src/nxe_udp_socket_checksum_disable.c
        netxduo/common/src/nxe_udp_socket_checksum_enable.c
        netxduo/common/src/nxe_udp_socket_create.c
        netxduo/common/src/nxe_udp_socket_delete.c
        netxduo/common/src/nxe_udp_socket_info_get.c
        netxduo/common/src/nxe_udp_socket_port_get.c
        netxduo/common/src/nxe_udp_socket_receive.c
        netxduo/common/src/nxe_udp_socket_receive_notify.c
        netxduo/common/src/nxe_udp_socket_send.c
        netxduo/common/src/nxe_udp_socket_source_send.c
        netxduo/common/src/nxe_udp_socket_unbind.c
        netxduo/common/src/nxe_udp_socket_vlan_priority_set.c
        netxduo/common/src/nxe_udp_source_extract.c
        netxduo/addons/dhcp/nxd_dhcp_client.c
)

target_include_directories(netxduo PUBLIC
        netxduo/common/inc
        netxduo/addons/dhcp
        netxduo/ports/${THREADX_ARCH}/${THREADX_TOOLCHAIN}/inc
)

# Configure NetX
target_compile_definitions(netxduo PUBLIC
        NX_DISABLE_IPV6
        NX_ENABLE_INTERFACE_CAPABILITY
        NX_DISABLE_ERROR_CHECKING
        NX_DISABLE_FRAGMENTATION
        NX_DISABLE_IP_RX_CHECKSUM
        NX_DISABLE_IP_TX_CHECKSUM
        NX_DISABLE_LOOPBACK_INTERFACE
        NX_DISABLE_PACKET_CHAIN
        NX_DISABLE_PACKET_INFO
        HAL_ETH_MODULE_DISABLED
        NX_DISABLE_UDP_INFO
        NX_DISABLE_UDP_RX_CHECKSUM
        NX_DISABLE_UDP_TX_CHECKSUM
        #        TX_ENABLE_EVENT_TRACE
)

target_link_libraries(netxduo PUBLIC threadx)
